# node-plane

./: .env.example  .gitignore  CHANGELOG.md  DRIVER_ARCHITECTURE.md  INSTALL.md  NODE_AGENT_ARCHITECTURE.md  README.md  RELEASES.md  VERSION  docker-compose.yml  requirements-dev.txt  requirements.txt
app/: config.py  main.py  manage_db.py
app/db/: __init__.py  migrate_sqlite_to_postgres.py  postgres_db.py  postgres_schema.py  schema.py  stores.py  types.py
app/driver/: __init__.py
app/handlers/: admin_commands.py  admin_server_wizard.py  admin_wizard.py  user_getkey.py  user_profile.py
app/i18n/: __init__.py
app/services/: alerts.py  (+17 more)
runtime_assets/: amnezia-config-decoder.py  awg-add-user.sh  awg-del-user.sh  awg-template.json  conf2vpn.py  deploy-awg.sh  deploy-xray.sh  init-awg.sh  init-xray.sh  manifest.json  node.env.example  regenerate-awg-entropy.sh  show-awg-entropy.sh  sync-xray.sh  xray-add-user-existing.sh  xray-add-user.sh  xray-del-user.sh  xray-enable-stats.sh  xray-list-traffic.sh  xray-list-users.sh
rust/node-agent/: Cargo.toml  README.md  build.rs
rust/node-agent/src/: main.rs
rust/node-driver/: Cargo.toml  README.md  build.rs
rust/node-driver/src/: agent_transport.rs  main.rs
scripts/: check_updates.sh  cleanup_releases.sh  gen_driver_proto.sh  healthcheck.sh  install.sh  postgres_runtime.sh  rollback.sh  run_node_agent.sh  run_node_driver.sh  setup_driver_agents.sh  tag_release.sh  update.sh
tests/: postgres_test_harness.py  test_access_gate_settings.py  test_admin_start_bootstrap.py  test_admin_views.py  test_alerts.py  test_app_settings.py  test_backups.py  test_db_migration.py  test_db_migration_postgres.py  test_first_start_language.py  test_legacy_update_compat.py  test_postgres_runtime.py  test_probe_summary.py  test_provisioning_reconcile_driver.py  test_server_runtime.py  test_system_reset.py  test_updates.py  test_user_access.py
(+24 files in other folders)
