[package]
name = "node-plane-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
