[package]
name = "node-plane-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
uuid = { version = "1.18", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
