[package]
name = "node-plane-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tokio-postgres = "0.7"
tonic = { version = "0.12", features = ["transport"] }
uuid = { version = "1.18", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
